# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

# Tests that do not run on Android
android_test_exception_sources = [
  "//brave/browser/brave_content_browser_client_browsertest.cc",
  "//brave/browser/brave_scheme_load_browsertest.cc",
  "//brave/browser/brave_search/brave_search_browsertest.cc",
  "//brave/browser/brave_shields/brave_shields_web_contents_observer_browsertest.cc",
  "//brave/browser/brave_shields/cookie_expiry_browsertest.cc",
  "//brave/browser/brave_shields/domain_block_page_browsertest.cc",
  "//brave/browser/brave_shields/eventsource_pool_limit_browsertest.cc",
  "//brave/browser/brave_shields/websockets_pool_limit_browsertest.cc",
  "//brave/browser/brave_wallet/brave_wallet_ethereum_chain_browsertest.cc",
  "//brave/browser/brave_wallet/brave_wallet_event_emitter_browsertest.cc",
  "//brave/browser/brave_wallet/brave_wallet_service_browsertest.cc",
  "//brave/browser/brave_wallet/brave_wallet_sign_message_browsertest.cc",
  "//brave/browser/brave_wallet/brave_wallet_tab_helper_browsertest.cc",
  "//brave/browser/brave_wallet/ethereum_provider_browsertest.cc",
  "//brave/browser/brave_wallet/send_or_sign_transaction_browsertest.cc",
  "//brave/browser/brave_wallet/solana_provider_browsertest.cc",
  "//brave/browser/brave_wallet/solana_provider_renderer_browsertest.cc",
  "//brave/browser/brave_wallet/wallet_watch_asset_browsertest.cc",
  "//brave/browser/content_settings/brave_content_settings_browsertest.cc",
  "//brave/browser/debounce/debounce_browsertest.cc",
  "//brave/browser/extensions/api/brave_theme_api_browsertest.cc",
  "//brave/browser/extensions/brave_crx_generation_browsertest.cc",
  "//brave/browser/extensions/brave_extension_functional_test.cc",
  "//brave/browser/extensions/brave_extension_functional_test.h",
  "//brave/browser/extensions/brave_extension_provider_browsertest.cc",
  "//brave/browser/extensions/brave_theme_event_router_browsertest.cc",
  "//brave/browser/extensions/extension_system_browsertest.cc",
  "//brave/browser/perf/brave_perf_features_processor_browsertest.cc",
  "//brave/browser/policy/brave_policy_browsertest.cc",
  "//brave/browser/profiles/delete_profile_helper_browsertest.cc",
  "//brave/browser/renderer_context_menu/brave_mock_render_view_context_menu.cc",
  "//brave/browser/renderer_context_menu/brave_mock_render_view_context_menu.h",
  "//brave/browser/renderer_context_menu/brave_spelling_menu_observer_browsertest.cc",
  "//brave/browser/search_engines/search_engine_provider_service_browsertest.cc",
  "//brave/browser/search_engines/search_engine_tracker_browsertest.cc",
  "//brave/browser/speedreader/speedreader_browsertest.cc",
  "//brave/browser/themes/brave_theme_service_browsertest.cc",
  "//brave/browser/translate/brave_translate_browsertest.cc",
  "//brave/browser/ui/bookmark/bookmark_tab_helper_browsertest.cc",
  "//brave/browser/ui/brave_browser_command_controller_browsertest.cc",
  "//brave/browser/ui/content_settings/brave_autoplay_blocked_image_model_browsertest.cc",
  "//brave/browser/ui/toolbar/brave_app_menu_model_browsertest.cc",
  "//brave/browser/ui/webui/brave_wallet/wallet_panel_ui_browsertest.cc",
  "//brave/browser/ui/webui/new_tab_page/brave_new_tab_ui_browsertest.cc",
  "//brave/browser/ui/webui/private_new_tab_page/brave_private_new_tab_page_browsertest.cc",
  "//brave/browser/ui/webui/welcome_page/brave_welcome_ui_browsertest.cc",
  "//brave/browser/web_package/signed_exchange_request_browsertest.cc",
  "//brave/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
  "//brave/chromium_src/chrome/browser/ui/hats/hats_service_browsertest.cc",
  "//brave/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
  "//brave/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
  "//brave/components/brave_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_context_helper.cc",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_context_helper.h",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_context_util.cc",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_context_util.h",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_contribution.cc",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_contribution.h",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_network_util.cc",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_network_util.h",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_response.cc",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_response.h",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_util.cc",
  "//brave/components/brave_rewards/browser/test/common/rewards_browsertest_util.h",
  "//brave/components/brave_rewards/browser/test/rewards_browsertest.cc",
  "//brave/components/brave_rewards/browser/test/rewards_contribution_browsertest.cc",
  "//brave/components/brave_rewards/browser/test/rewards_flag_browsertest.cc",
  "//brave/components/brave_rewards/browser/test/rewards_notification_browsertest.cc",
  "//brave/components/brave_rewards/browser/test/rewards_p3a_browsertest.cc",
  "//brave/components/brave_rewards/browser/test/rewards_publisher_browsertest.cc",
  "//brave/components/brave_rewards/browser/test/rewards_state_browsertest.cc",
  "//brave/components/content_settings/renderer/brave_content_settings_agent_impl_browsertest.cc",
  "//brave/third_party/blink/renderer/modules/brave/navigator_browsertest.cc",
  "//chrome/browser/extensions/browsertest_util.cc",
  "//chrome/browser/extensions/browsertest_util.h",
  "//chrome/browser/extensions/extension_browsertest.cc",
  "//chrome/browser/extensions/extension_browsertest.h",
  "//chrome/browser/media/media_browsertest.cc",
  "//chrome/browser/media/media_browsertest.h",
  "//chrome/browser/ui/test/test_browser_dialog.cc",
  "//chrome/browser/ui/test/test_browser_dialog.h",
  "//chrome/browser/ui/test/test_browser_ui.cc",
  "//chrome/browser/ui/test/test_browser_ui.h",
]

android_test_exception_deps = [
  "//brave/browser/autoplay:browser_tests",
  "//brave/browser/brave_ads:browser_tests",
  "//brave/browser/brave_news:browser_tests",
  "//brave/browser/brave_rewards/test:browser_tests",
  "//brave/browser/browsing_data:browser_tests",
  "//brave/browser/decentralized_dns/test:browser_tests",
  "//brave/browser/extensions",
  "//brave/browser/extensions:test_support",
  "//brave/browser/farbling:browser_tests",
  "//brave/browser/net:browser_tests",
  "//brave/browser/permissions:browser_tests",
  "//brave/browser/psst:browser_tests",
  "//brave/browser/test:browser_tests",
  "//brave/browser/ui:browser_tests",
  "//brave/browser/ui/tabs/test:browser_tests",
  "//brave/browser/ui/views/tabs:browser_tests",
  "//brave/components/brave_wallet/resources:ethereum_provider_generated_resources",
  "//brave/components/de_amp/browser/test:browser_tests",
  "//brave/renderer/skus:browser_tests",
  "//brave/renderer/test:browser_tests",
  "//chrome/browser/ui/browser_window",
  "//chrome/browser/web_applications",
  "//chrome/test:test_support_ui",
  "//extensions/browser:test_support",
  "//extensions/common:common_constants",
  "//extensions/common:test_support",
  "//ui/views",
]

# Tests that run only on Android
android_only_test_sources = [
  "//brave/components/brave_wallet/browser/android_page_appearing_browsertest.cc",
  "//chrome/test/android/browsertests_apk/android_browsertests_jni_onload.cc",
  "//chrome/test/base/android/android_browser_test_browsertest_android.cc",
]

android_only_test_deps = [
  ":test_support",
  "//android_webview/common",
  "//brave/browser/partnercustomizations:delegate_public_impl_java",
  "//brave/components/brave_wallet/browser:test_support",
  "//brave/components/cosmetic_filters/browser:browser",
  "//brave/third_party/android_deps:com_android_installreferrer_java",
  "//chrome:chrome_android_core",
  "//chrome/android:delegate_public_impl_java",
  "//chrome/browser/flags:flags_android",
  "//chrome/browser/lens:delegate_public_impl_java",
  "//chrome/browser/locale:delegate_public_impl_java",
  "//chrome/browser/metrics:test_support",
  "//chrome/test:android_browsertests_assets",
  "//chrome/test:android_browsertests_java",
  "//chrome/test:test_support",
  "//chrome/test:test_support_ui_android",
  "//components/browser_ui/widget/android:java",

  # TODO(crbug.com/961849): This is needed for ShellManager which is what
  # the ChromeBrowserTestsActivity is using to build the java UI. It's
  # likely we want to replace it with something new that uses ChromeWindow
  # and CompositorViewHolder instead.
  "//content/shell:content_shell_lib",
  "//content/test:android_test_message_pump_support",
  "//testing/android/native_test:native_test_support",
]
